# revx

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
crates/revx-analysis/: Cargo.toml
crates/revx-analysis/examples/: debug_parity.rs
crates/revx-analysis/src/: lattice.rs  lib.rs  resource.rs  ssa.rs
crates/revx-analysis/tests/: corpus_golden.rs  corpus_smoke.rs  parity_suite.rs  quality_smoke.rs
crates/revx-app/: Cargo.toml
crates/revx-app/src/: main.rs
crates/revx-arch-arm64/: Cargo.toml
crates/revx-arch-arm64/src/: format_fast.rs  lib.rs
crates/revx-arch-x64/: Cargo.toml
crates/revx-arch-x64/src/: lib.rs
crates/revx-core/: Cargo.toml
crates/revx-core/src/: compound.rs  intern.rs  lib.rs  limits.rs  model.rs
crates/revx-daemon/: Cargo.toml
crates/revx-daemon/src/: lib.rs  mcp_http.rs
crates/revx-engine/: Cargo.toml
crates/revx-engine/src/: main.rs  tui.rs
crates/revx-loader/: Cargo.toml
crates/revx-loader/src/: lib.rs
crates/revx-loader/tests/: load_smoke.rs
crates/revx-micro/: Cargo.toml
crates/revx-micro/src/: main.rs
crates/revx-query/: Cargo.toml
crates/revx-query/src/: lib.rs
crates/revx-workspace/: Cargo.toml
crates/revx-workspace/src/: lib.rs
crates/revx-workspace/tests/: workspace_smoke.rs
deploy/local/: start-macos.sh  start-windows.ps1  stop-linux.sh  stop-macos.sh  stop-windows.ps1
deploy/mcp/: OFFICIAL.md  README.md  doctor.sh  lib.sh  one-click.sh  print-config.sh  start-mcp.sh
deploy/mcp/templates/: claude_desktop.mcp.json  remote-ssh.mcp.json
tests/fixtures/: manifest.toml
