[workspace]
members = [
    "crates/revx-analysis",
    "crates/revx-app",
    "crates/revx-arch-arm64",
    "crates/revx-arch-x64",
    "crates/revx-core",
    "crates/revx-daemon",
    "crates/revx-loader",
    "crates/revx-micro",
    "crates/revx-query",
    "crates/revx-engine",
    "crates/revx-workspace",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["OpenAI Codex"]

[workspace.dependencies]
anyhow = "1"
blake3 = "1"
bzip2 = "0.6"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
crc32fast = "1.5"
dirs = "6"
fallible-iterator = "0.3"
flate2 = "1"
gimli = { version = "0.32", default-features = false, features = ["read", "std"] }
hex = "0.4"
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "intel", "instr_info"] }
memmap2 = "0.9"
object = { version = "0.38", default-features = false, features = ["read_core", "pe", "elf", "macho", "std", "unaligned"] }
pdb = "0.8"
ratatui = "0.29"
rusqlite = { version = "0.37", default-features = false }
ruzstd = "0.8.2"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
tempfile = "3"
tar = "0.4"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync", "net", "time", "fs", "io-std", "io-util"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "std", "ansi"] }
uuid = { version = "1", features = ["v4", "serde"] }
yaxpeax-arch = "0.3"
yaxpeax-arm = { version = "0.4", default-features = false, features = ["std"] }
xz2 = "0.1"
zip = { version = "4", default-features = false, features = ["deflate"] }


[profile.release]
overflow-checks = false
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = 0
incremental = false

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"
