[package]
name = "revx-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
full-loader = ["revx-daemon/full-loader", "revx-loader/full"]

[[bin]]
name = "revx-engine"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
revx-core = { path = "../revx-core" }
revx-daemon = { path = "../revx-daemon", default-features = false }
revx-loader = { path = "../revx-loader", default-features = false }
revx-workspace = { path = "../revx-workspace", default-features = false, features = ["sqlite-bundled"] }
