[package]
name = "revx-loader"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = []
debug-info = ["dep:gimli", "dep:pdb", "dep:fallible-iterator"]
containers = ["dep:zip", "dep:tar", "dep:xz2", "dep:bzip2", "dep:flate2", "dep:ruzstd"]
full = ["debug-info", "containers"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
bzip2 = { workspace = true, optional = true }
fallible-iterator = { workspace = true, optional = true }
flate2 = { workspace = true, optional = true }
gimli = { workspace = true, optional = true }
hex.workspace = true
memmap2.workspace = true
object.workspace = true
pdb = { workspace = true, optional = true }
revx-core = { path = "../revx-core" }
ruzstd = { workspace = true, optional = true }
serde_json.workspace = true
tar = { workspace = true, optional = true }
xz2 = { workspace = true, optional = true }
zip = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true
bzip2.workspace = true
crc32fast.workspace = true
flate2.workspace = true
rusqlite.workspace = true
ruzstd.workspace = true
xz2.workspace = true
zip.workspace = true
